<resources>
    <string name="channel_id">32001</string>
    <string name="app_name">Posh Wash Driver</string>
    <string name="google_maps_key">AIzaSyBenhBjT4CJwgZhITbwtvmsx5p83Ynvueo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="delete_message">Are you sure you want to deactivate account? You won\'t be able to recover your account.</string>
    <string name="home">Home</string>
    <string name="manage_vehicle">Manage Vehicle</string>
    <string name="booking_vehicle">Booking Vehicle</string>
    <string name="transaction_history">Transaction History</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up!</string>
    <string name="sign_up_btn">Sign up </string>
    <string name="sign_in_btn">Sign In </string>
    <string name="sign_up_text">Sign up</string>
    <string name="connect_with">Connect with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="name">First Name</string>
    <string name="fname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="emailprofile">Email Address -</string>
    <string name="namemanagecard">Name -</string>
    <string name="phoneprofile">Phone Number -</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="id_proof">Id Proof</string>
    <string name="company_name_profile">Company Name -</string>
    <string name="addressprofile">Address -</string>
    <string name="address2profile">Address 2 -</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address1</string>
    <string name="address_new">Address</string>
    <string name="address2">Address2</string>
    <string name="password">Password</string>
    <string name="referal_code">Referral Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? <b> Sign in</b></string>
    <string name="already_have_account_serive">Already have an account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="user_name"><font size="12">Username</font></string>
    <string name="donot_account">Don\'t have an account? <b> Sign Up</b></string>
    <string name="choose_vehicle_type">Choose vehicle type</string>
    <string name="cart_validation_error">For first time order you have to add at least a package to place this order.</string>
    <string name="vin_optional">VIN (optional)</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="plate_number">Plate number</string>
    <string name="color">Color</string>
    <string name="vehicle_location">Vehicle location</string>
    <string name="vehicle_location1">Vehicle location1</string>
    <string name="vehicle_location2">Vehicle location2 (Optional)</string>
    <string name="please_select">Please Select</string>
    <string name="parking_floor">Parking floor</string>
    <string name="upload_vehicle_picture">Upload vehicle picture</string>
    <string name="upload_vehicle_picture_optional">Upload vehicle picture (optional)</string>
    <string name="browse">Browse</string>
    <string name="submit">Submit</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="my_booking">My Bookings</string>
    <string name="pending_booking">Pending Bookings</string>
    <string name="ondemanbooking">On Demand Bookings</string>
    <string name="vehiclelist">Vehicle list</string>
    <string name="my_profile">My Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="aboutus">About us</string>
    <string name="founditemhistory">Found Item History</string>
    <string name="earnfreewash">Earn Free Wipe</string>
    <string name="earnfreewashdash">Earn Free Wipes !</string>
    <string name="aboutustext">Lorem Ipsum is simply dummy text of the printing and typesetting industry.product_imgs, product_imgnter took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng </string>
    <string name="lifetimeearning">Lifetime Earnings</string>
    <string name="currentbalance">Current Balance</string>
    <string name="copycode">Copy Code</string>
    <string name="showyourreferral">Show your referral code now!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="yourname">Your Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_phone_number">Enter your Mobile number</string>
    <string name="mobile_number_required">Please enter mobile number.</string>
    <string name="password_required">Please enter Pin.</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_zipcode">Enter your zip code</string>
    <string name="save">Save</string>
    <string name="cannotleftblank">Required</string>
    <string name="validation_error">Please enter valid email address</string>
    <string name="validation_error_new">Please enter valid email address</string>
    <string name="validation_error_password"> Password should be minimum 6 Character with mix of characters + numerical</string>
    <string name="manageprofile">Manage profile</string>
    <string name="changepassword">Change Password</string>
    <string name="managepayment">Manage payments</string>
    <string name="managemembership">Manage membership</string>
    <string name="privacyplicies">Privacy policies</string>
    <string name="termscondition">Terms and conditions</string>
    <string name="agreetermscondition"><u>I agree terms and conditions</u></string>
    <string name="suggestions">Suggestions</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="reportuser">Report user</string>
    <string name="contactus">Contact us</string>
    <string name="enteroldpassword">Please enter old password</string>
    <string name="newpassword">New password</string>
    <string name="enternewpassword">Please enter new password</string>
    <string name="enterconfirmpassword">Please enter confirm password</string>
    <string name="confirmpassworddoesnotmatch">New and confirm password do not match.</string>
    <string name="agevalid">You must be 18 years old or above</string>
    <string name="vehicleadd">Vehicles details added successfully</string>
    <string name="managecard">Manage Cards</string>
    <string name="card_details">Card Details</string>
    <string name="cardnumber">Card Number -</string>
    <string name="zipcode">Zip Code -</string>
    <string name="zipcode_shipping">Zip Code</string>
    <string name="addnewcard">Add New Card</string>
    <string name="my_transaction_history">My Transaction History</string>
    <string name="my_cart">My Cart</string>
    <string name="place_this_order">Place this order</string>
    <string name="photo">Photo</string>
    <string name="gender">Gender</string>
    <string name="customer_type">Customer Type</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_summary">Payment summary</string>
    <string name="age">Age</string>
    <string name="social_number">Social Security ID/ Number</string>
    <string name="instruction_video"><u>Instructions</u></string>
    <string name="checkout">Checkout</string>
    <string name="new_address">New address</string>
    <string name="saved_address">Saved address</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="paypal">Paypal</string>
    <string name="creditcard">Credit Card</string>
    <string name="total_amt">Total Amount</string>
    <string name="continue_to_confirmation">Continue to Confirmation</string>
    <string name="shipping_to">Shipping to</string>
    <string name="edit">Edit</string>
    <string name="your_order">Your Order</string>
    <string name="order_now">Order now</string>
    <string name="okowasch_products">Okowipe Products</string>
    <string name="search_products_here">Search products here</string>
    <string name="type_your_location">Type Your Location</string>
    <string name="order_list">Order list</string>
    <string name="wash_products_list">Okowipe Products</string>
    <string name="android">android</string>
    <string name="service_provider">Service Provider</string>
    <string name="exterior_nwasch">Exterior\nwipe</string>
    <string name="exterior_nwasch_new">Exterior wipe</string>
    <string name="exterior_interior_wasch">Exterior \u0026\ninterior wipe</string>
    <string name="exterior_interior_wasch_new">Exterior \u0026 interior wipe</string>
    <string name="normal_user">Customer</string>
    <string name="products_order">Product Order</string>
    <string name="getting_address">Getting Address &amp;</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="save_address">Save Address</string>
    <string name="remove">REMOVE</string>
    <string name="select_one_address">Select One Address</string>
    <string name="select_one_card"> Please select one card.</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="returned">Returned</string>
    <string name="cancelled">Cancelled</string>
    <string name="checktermsandcondition">Please select Terms and Condition to continue.</string>
    <string name="checkintractions">Please select Instructions to continue.</string>
    <string name="about">about-us</string>
    <string name="contact">contact-us</string>
    <string name="privacy">privacy-policy</string>
    <string name="terms">terms</string>
    <string name="get_fare">Get Fare</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_text">If you do not receive your OTP in the next 20 seconds, you may request for a new OTP by clicking on the \"Regenerate OTP\" link below.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP Verification !</string>
</resources>