<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rr_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="20dp"
                android:src="@drawable/back"
                android:tint="@color/colorskyblue" />

            <com.poshwash.driver.views.customViews.CustomTextViewBold
                android:id="@+id/txt_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:text="@string/editprofile"
                android:textColor="@color/colorskyblue"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txt_heading" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp">

                    <!-- <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/user_bg"/>-->


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_profleimg"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/defalut_bg"
                        app:civ_border_color="@color/notificationtextcolor"
                        app:civ_border_width="1dp" />


                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp" />

                </RelativeLayout>

                <!-- <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/user_profleimg"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:src="@drawable/user"
                     app:civ_border_color="@color/notificationtextcolor"
                     app:civ_border_width="1dp"
                     android:visibility="gone"/>-->


                <RelativeLayout
                    android:id="@+id/rr_camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle"
                    app:layout_anchor="@+id/user_profleimg"
                    app:layout_anchorGravity="right|center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@drawable/camera" />

                </RelativeLayout>


            </androidx.coordinatorlayout.widget.CoordinatorLayout>


            <com.poshwash.driver.views.customViews.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/yourname"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_13sdp" />


            <EditText
                android:id="@+id/edt_entername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/recentaglecornor"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/enter_your_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="50"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textColorHint="@color/texthintcolor"
                android:textCursorDrawable="@null" />

            <com.poshwash.driver.views.customViews.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/email"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_13sdp"
                android:visibility="gone" />


            <com.poshwash.driver.views.customViews.CustomEditTextFont
                android:id="@+id/edt_enteremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/recentaglecornor"
                android:focusable="false"
                android:hint="@string/enter_your_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:textColorHint="@color/texthintcolor"
                android:textCursorDrawable="@android:color/black"
                android:visibility="gone" />


            <com.poshwash.driver.views.customViews.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/phone_number"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_13sdp" />


            <com.poshwash.driver.views.customViews.CustomEditTextFont
                android:id="@+id/edt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/recentaglecornor"
                android:digits="0123456789+ "
                android:hint="@string/enter_your_phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:textColorHint="@color/texthintcolor"
                android:textCursorDrawable="@null" />


            <com.poshwash.driver.views.customViews.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/address"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_13sdp" />


            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/recentaglecornor"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/enter_your_address"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:textColorHint="@color/texthintcolor"
                android:textCursorDrawable="@null" />


            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/ripplealreay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:mrl_rippleAlpha="0.1"
                app:mrl_rippleColor="@color/white"
                app:mrl_rippleDelayClick="true"
                app:mrl_rippleDimension="10dp"
                app:mrl_rippleDuration="350"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true"
                app:mrl_ripplePersistent="false"
                app:mrl_rippleRoundedCorners="@dimen/_30sdp">

                <com.poshwash.driver.views.customViews.CustomButtonBold
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybuttonsubmit"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>